--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">WeeDigital</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse">
+          <div class="bg-dark p-4" id="navbarToggleExternalContent">
+            <h5 class="text-white h4">Collapsed content</h5>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
+          </div>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="#noob">Noob Stories</a>
@@ -64,8 +68,8 @@
   <!-- Content -->
   <section>
     <div class="content" id="noob">
-      <h3 class="text-center" style="margin: 50px 0px; color: antiquewhite;">NOOB STORIES</h3>
-      <div class="card-deck">
+      <h3 class="text-center title" style="margin: 50px 0px; color: antiquewhite;">NOOB STORIES</h3>
+      <div class="card-deck card-deck-display">
         <div class="card" style="border: none; background-color: transparent">
           <img src="img/xbox-series.jpg" class="card-img-top" id="myBtn" alt="xbox-series">
           <div class="card-body">
