feat: changes for responsiveness

--- a/index.html
+++ b/index.html
@@ -54,11 +54,6 @@
 
   <!-- Header -->
   <header class="masthead header">
-    <div class="masthead-content">
-      <div class="container">
-        
-      </div>
-    </div>
   </header>
 
   <!-- Content -->
@@ -121,8 +116,8 @@
               <br>
               <br>
               <b>Price?</b>
-              <div class="col-6">
-                <img src="img/tf.gif" alt="wtf">
+              <div class="col-12">
+                <img class="image-position" src="img/tf.gif" alt="wtf">
               </div>
           </p>
         </div>
