feat: Toggle script for dropdown menu

--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
       prevPosition = currentPosition;
     }
   </script>
+  <script>
+    $(".navbar-collapse").on("click", function(){
+      $(".navbar-collapse").hide(); 
+    });
+  </script>
 
 </body>
 
