--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
     }
   </script>
   <script>
+    $(".navbar-toggler").on("click", function () {
+      $(".navbar-collapse").toggle();
+    });
+
     $(".navbar-collapse").on("click", function(){
       $(".navbar-collapse").hide(); 
     });
