--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <br>
               <b>Price?</b>
               <div class="col-12">
-                <img class="image-position" src="img/tf.gif" alt="wtf">
+                <img class="image-position" src="img/tf.gif" alt="wtf" style="width: 100%;">
                 <h6 style="text-align: center; padding-top: 5px">CHIEF</h6>
               </div>
           </p>
