feat: changes to view of the site
Card transitions, Modal look.

--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
     <div class="content" id="noob">
       <h3 class="text-center title" style="margin: 50px 0px; color: #293039;">NOOB STORIES</h3>
       <div class="card-deck card-deck-display">
-        <div class="card" style="border: none; background-color: transparent">
-          <img src="img/xbox-series.jpg" class="card-img-top" id="myBtn" alt="xbox-series">
+        <div class="card" style="border: none; background-color: black; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);">
+          <img src="img/3.png" class="card-img-top" id="myBtn" alt="xbox-series">
           <div class="card-body">
             <h5 class="card-title">Xbox Series X</h5>
             <p class="card-text">Our two cent noob thoughts on the Xbox Series X.</p>
           </div>
         </div>
-        <div class="card" style="border: none; background-color: transparent">
-          <img src="img/xbox-series.jpg" class="card-img-top" alt="virtual-reality">
+        <div class="card" style="border: none; background-color: black; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);">
+          <img src="img/1.png" class="card-img-top" alt="virtual-reality">
           <div class="card-body">
             <h5 class="card-title">More content coming soon</h5>
             <p class="card-text"></p>
           </div>
         </div>
-        <div class="card" style="border: none; background-color: transparent">
-          <img src="img/xbox-series.jpg" class="card-img-top" alt="...">
+        <div class="card" style="border: none; background-color: black; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);">
+          <img src="img/2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">More content coming soon</h5>
             <p class="card-text"></p>
@@ -96,33 +96,41 @@
       <span class="close"></span>
       <div class="card" style="border: none; background-color: transparent">
         <div class="card-body">
-          <h5 class="card-title">Falling in love with the Tower (Xbox series)</h5>
-          <p class="card-text card-text-space">
-              Here is an attempt to persuade myself and other gamers to fall in love with the up and coming Xbox Series X despite its Tower life design. 
-              <br>
-              I must say they have finally lived up to its name exBOX.
-              <br>
-              <b>Xbox project Scarlett</b> is predicted to lead the frontier of the next gen gaming sphere. So what does this mean?
-              Basically means it is set out to thrash every other gaming console currently released as of yet, but for now we shall reserve our comments on the PS5 release and its specs as they are yet to be announced. 
-              <br>
-              <br>
-              <b>To substantiate this we shall look at the specs of the Xbox Series X and why me and every gamer should consider making a purchase.</b>
-              <br>
-              <br>
-              <b>4K/60fps</b> - The more frames per second the smoother the quality, we are guaranteed an out of this world gaming experience given by the Zen 2 and RDNA architecture from AMD.
-              <br>
-              <b>NVMe solid-state storage</b> - Just know that it is faster than the SATA SSD.
-              <br>
-              <br>
-              To sum it all, the xbox Series X will give a faster better performance with less power consumption than its current competitors providing an exceptional ideal dream standard of every gamers wish.
-              <br>
-              <br>
-              <b>Price?</b>
-              <div class="col-12">
-                <img class="image-position" src="img/tf.gif" alt="wtf" style="width: 100%;">
-                <h6 style="text-align: center; padding-top: 5px">CHIEF</h6>
-              </div>
-          </p>
+          <h4 class="card-title">Falling in love with Project Scarlett</h4>
+          <div class="row">
+            <div class="col-sm-6">
+              <p class="card-text card-text-space">
+                Here is an attempt to persuade myself and other gamers to fall in love with the up and coming Xbox Series X despite its Tower life design. 
+                <br>
+                I must say they have finally lived up to its name exBOX.
+                <br>
+                <b>Xbox project Scarlett</b> is predicted to lead the frontier of the next gen gaming sphere. So what does this mean?
+                Basically means it is set out to thrash every other gaming console currently released as of yet, but for now we shall reserve our comments on the PS5 release and its specs as they are yet to be announced. 
+                <br>
+                <br>
+                <b>To substantiate this we shall look at the specs of the Xbox Series X and why me and every gamer should consider making a purchase.</b>
+                
+                <ul>
+                  <li><b>4K/60fps</b></li>
+                  <p>The more frames per second the smoother the quality, we are guaranteed an out of this world gaming experience given by the Zen 2 and RDNA architecture from AMD.</p>
+                  <li><b>NVMe solid-state storage</b></li>
+                  <p>Just know that it is faster than the SATA SSD.</p>
+                </ul>
+              </p>
+            </div>
+            <div class="col-sm-6">
+              <p class="card-text" style="margin-top: 20px;"> 
+                To sum it all, the xbox Series X will give a faster better performance with less power consumption than its current competitors providing an exceptional ideal dream standard of every gamers wish.
+                <br>
+                <br>
+                <b>So Price wise Chief?</b>
+                <br>
+                <small> - It is said to range between £500-£600, miss me I am booking a flight back home.</small>
+              </p>
+              <img class="image-position" src="img/tf.gif" alt="wtf" style="width: 100%;">
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
@@ -138,13 +146,13 @@
   <!-- Contact page -->
   <section>
     <div class="container contact" id="contact">
-      <h6 class="text-center" style="color: #293039; font-weight: 100 !important">Get in touch with us</h2>
+      <!-- <h6 class="text-center" style="color: #293039; font-weight: 100 !important">Get in touch with us</h2> -->
       <div class="text-center">
         <div class="row" style="display: inline-flex">
-          <div class="col-6">
+          <div class="col-6 icons">
             <a href="https://twitter.com/wdigitalza" target="_blank" class="fa fa-twitter"></a>
           </div>
-          <div class="col-6">
+          <div class="col-6 icons">
             <a href="" target="_blank" class="fa fa-facebook"></a>
           </div>
         </div>
