--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!-- Content -->
   <section>
     <div class="content" id="noob">
-      <h3 class="text-center title" style="margin: 50px 0px; color: #293039;">NOOB STORIES</h3>
+      <!-- <h3 class="text-center title" style="margin: 50px 0px; color: #293039;">NOOB STORIES</h3> -->
       <div class="card-deck card-deck-display">
         <div class="card" style="border: none; background-color: black; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);">
           <img src="img/3.png" class="card-img-top" id="myBtn" alt="xbox-series">
