fix: added class to html format

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </p>
             </div>
             <div class="col-sm-6">
-              <p class="card-text" style="margin-top: 20px;"> 
+              <p class="card-text card-text-space" style="margin-top: 20px;"> 
                 To sum it all, the xbox Series X will give a faster better performance with less power consumption than its current competitors providing an exceptional ideal dream standard of every gamers wish.
                 <br>
                 <br>
