feat: youtube link to icon

--- a/index.html
+++ b/index.html
@@ -149,10 +149,13 @@
       <!-- <h6 class="text-center" style="color: #293039; font-weight: 100 !important">Get in touch with us</h2> -->
       <div class="text-center">
         <div class="row" style="display: inline-flex">
-          <div class="col-6 icons">
+          <div class="col-4 icons">
             <a href="https://twitter.com/wdigitalza" target="_blank" class="fa fa-twitter"></a>
           </div>
-          <div class="col-6 icons">
+          <div class="col-4 icons">
+              <a href="https://www.youtube.com/channel/UC7nnaekRSnS_pvlICduAT9g" target="_blank" class="fa fa-youtube-play"></a>
+          </div>
+          <div class="col-4 icons">
             <a href="" target="_blank" class="fa fa-facebook"></a>
           </div>
         </div>
